--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "fix:eslint": "eslint --ext .js,.vue resources/js/ --fix"
     },
     "devDependencies": {
+        "@eslint/js": "^9.27.0",
         "@tailwindcss/vite": "^4.0.0",
         "@vitejs/plugin-vue": "^5.2.4",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "eslint": "^9.27.0",
+        "eslint-plugin-vue": "^10.1.0",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "vue-eslint-parser": "^10.1.3"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.11"
